# emotive-currents

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  exploratory_data_analysis.ipynb  pyproject.toml  setup.sh  setup_dvc.sh
.dvc/: config
.github/workflows/: branch-from-issue.yml  ci.yml
api/: README.md
configs/: README.md  claude_3_haiku.json  claude_opus_4.json  claude_sonnet_4.json  deepseek_chat_v3_0324.json  deepseek_r1_distill_qwen_1_5b.json  gemini_2_0_flash_001.json  gemini_2_0_flash_exp.json  gemini_2_0_flash_lite.json  gemini_2_5_flash_preview.json  gemini_2_5_pro.json  gemini_flash_1_5_8b.json  gemma_2_27b_it.json  gemma_2_9b_it.json  gemma_3_12b_it.json  gemma_3_27b.json  gemma_3_4b_it.json  gemma_3n_e4b_it.json  gpt_3_5_turbo.json  gpt_4_1_2025_04_14.json  gpt_4_1_mini.json  gpt_4_1_nano.json  gpt_4o.json  gpt_4o_mini.json  l3_lunaris_8b.json  llama_3_3_70b_instruct.json  ministral_3b.json  ministral_8b.json  mistral_7b_instruct.json  mistral_7b_instruct_v0_3.json  mistral_small_3_2_24b.json  qwen_2_5_7b_instruct.json  template.json
data/: processed.dvc
notebooks/: README.md
notebooks/exploratory/: exploratory_data_analysis.ipynb
scripts/: README.md  analyze_per_emotion_performance.py  download_dataset.py  mlflow_emotion_experiment.py  run_experiment.py  test_openrouter.py
src/emotive_currents/: __init__.py  ai_client.py  core.py  utils.py
src/emotive_currents/experiments/: __init__.py  emotion_classifier.py  emotion_labels.py
tests/: __init__.py  test_core.py  test_openrouter_integration.py  test_utils.py
